# modern-cpp-bonn

./: .gitignore  README.md  links
HW1/sol/: HW1_A.txt  HW1_B  HW1_B.cpp
HW2/igg_image/: CMakeLists.txt
HW2/igg_image/data/: test.pgm  test_up.pgm
HW2/igg_image/src/: CMakeLists.txt  main  main.cpp  main2.cpp
HW2/igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h  main.cpp
HW2/igg_image/tests/: CMakeLists.txt  t01_image_init.cpp
HW3/igg_image/: CMakeLists.txt
HW3/igg_image/data/: some.ppm  (+1 more)
Lecture0/: boring_error_msg  boring_error_msg.cpp  hello_world  hello_world.cpp
Lecture1/: const_and_ref  const_and_ref.cpp  hello_person  hello_person.cpp  loops  loops.cpp  vec_front_back  vec_front_back.cpp  vec_reserve  vec_reserve.cpp
Lecture2/: default_parameters  default_parameters.cpp  full_squares  full_squares.cpp  functions  functions.cpp  functions_by_reference  functions_by_reference.cpp  overloading  overloading.cpp  sum_product  sum_product.cpp  warnnings  warnnings.cpp
Lecture2/Rain_Sunny/: CMakeLists.txt
Lecture2/Rain_Sunny/src/: tools.cpp  tools.h  tools_main.cpp
Lecture3/: classes  classes.cpp  from_namespace  from_namespace.cpp  nameless_namespace  nameless_namespace.cpp  namespaces_meanning_of_life  namespaces_meanning_of_life.cpp  structs  structs.cpp
Lecture3/cmake_proj/: CMakeLists.txt
Lecture3/cmake_proj/tests/: CMakeLists.txt  test_blah.cpp
Lecture4/: copy_move  copy_move.cpp  default.cpp  inheritance  inheritance.cpp  operators  operators.cpp  overloading_const  overloading_const.cpp  rvalue_lvalue  rvalue_lvalue.cpp  rvalue_lvalue_class  rvalue_lvalue_class.cpp  virtual_functions.cpp
Lecture5/: CMakeLists.txt  const_interface  const_interface.cpp  get_line.cpp  printable  printable.cpp  reading_ifstream  reading_ifstream.cpp  rects  rects.cpp  streams.cpp  test_cols.txt  writing_to_file  writing_to_file.cpp
Lecture6/: class_point  class_point.cpp  pointers  pointers.cpp  static_variable  static_variable.cpp
Lecture7/: AbstractShape  AbstractShape.cpp
Lecture8/: Shared_pointers  Shared_pointers.cpp  Unique_pointers  Unique_pointers.cpp  enums  enums.cpp  good_example_smart_pointers  good_example_smart_pointers.cpp
(+25 files in other folders)
